# ut-cli

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.bash
ci/travis/: before_deploy.bash  script.bash
src/: argv.rs  config.rs  datetime.rs  delta.rs  error.rs  find.rs  main.rs  offset.rs  parse.rs  precision.rs  preset.rs  provider.rs  read.rs  timedelta.rs  unit.rs  validate.rs
src/argv/: delta.rs  hms.rs  offset.rs  precision.rs  preset.rs  timestamp.rs  unit.rs  ymd.rs
src/cmd/: generate.rs  parse.rs
src/cmd/generate/: app.rs  request.rs  run.rs
src/cmd/parse/: app.rs  run.rs
src/provider/: fixed.rs  local.rs  utc.rs
timedelta/: Cargo.toml
timedelta/src/: delta.rs  lib.rs
