[package]
name = "ut"
version = "0.1.2"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "timedelta",
]

[dependencies]
chrono = "^0.4"
clap = "^2.33"
failure = "^0.1"
regex = "^1"
strum = "^0.15"
strum_macros = "^0.15"
timedelta = {version = "^0.1.0", "path" = "timedelta"}
lazy_static = "^1.3"
