[package]
name = "ut-cli"
version = "0.1.3"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
categories = ["command-line-utilities"]
description = "A command line tool to handle unix timestamp."
homepage = "https://github.com/yoshihitoh/ut-cli/"
repository = "https://github.com/yoshihitoh/ut-cli/"
readme = "README.md"
keywords = ["timestamp"]
edition = "2018"
license = "MIT"

[[bin]]
name = "ut"
path = "src/main.rs"

[dependencies]
chrono = "^0.4"
clap = "^2.33"
failure = "^0.1"
lazy_static = "^1.3"
regex = "^1"
strum = "^0.15"
strum_macros = "^0.15"
time = "^0.1"
