[package]
name = "ut-cli"
version = "0.1.7"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
categories = ["command-line-utilities"]
description = "A command line tool to handle unix timestamp."
homepage = "https://github.com/yoshihitoh/ut-cli/"
repository = "https://github.com/yoshihitoh/ut-cli/"
readme = "README.md"
keywords = ["timestamp"]
edition = "2018"
license = "MIT"

[[bin]]
name = "ut"
path = "src/main.rs"

[dependencies]
chrono = "^0.4"
clap = "^2.33"
anyhow = "^1.0"
thiserror = "^1.0"
lazy_static = "^1.4"
regex = "^1"
strum = "^0.19"
strum_macros = "^0.18"
